# agari

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  deploy-web.yml  publish-crates-io.yml  release.yml
agari_validator/: RULESET_DIFFERENCES.md  agari_validator.py
crates/agari-core/: Cargo.toml
crates/agari-core/src/: context.rs  display.rs  hand.rs  lib.rs  main.rs  parse.rs  scoring.rs  shanten.rs  tile.rs  wait.rs  yaku.rs
crates/agari-wasm/: Cargo.toml
crates/agari-wasm/src/: lib.rs
scripts/: build-web.sh
src/: context.rs  display.rs  hand.rs  lib.rs  main.rs  scoring.rs  wait.rs  yaku.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: CNAME
web/src/: App.svelte  app.css
web/src/lib/: agari.ts  urlState.ts
web/src/lib/components/: ContextOptions.svelte  DoraPicker.svelte  HandDisplay.svelte  ScoreResult.svelte  Tile.svelte  TilePalette.svelte  TileThemeSwitcher.svelte
web/src/lib/i18n/: en.ts  index.ts  ja.ts  types.ts
web/src/lib/stores/: index.ts  tileTheme.ts
web/src/lib/wasm/: agari_wasm.d.ts  agari_wasm.js  agari_wasm_bg.wasm  agari_wasm_bg.wasm.d.ts  package.json
