[workspace]
members = ["crates/agari-core", "crates/agari-wasm"]
resolver = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = "thin"
opt-level = "z"

[workspace.package]
version = "0.18.0"
edition = "2024"
repository = "https://github.com/rysb-dev/agari"
homepage = "https://github.com/rysb-dev/agari"
license = "MIT"
