[package]
name = "agari"
version = "0.18.0"
edition = "2024"
repository = "https://github.com/rysb-dev/agari"
homepage = "https://github.com/rysb-dev/agari"
description = "A Riichi Mahjong hand calculator and scoring engine"
license = "MIT"
keywords = ["mahjong", "riichi", "scoring", "japanese-mahjong"]
categories = ["game-development", "algorithms"]
readme = "../../README.md"

[lib]
name = "agari"
path = "src/lib.rs"

[[bin]]
name = "agari"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
