[package]
name = "agari-wasm"
version = "0.12.0"
edition = "2024"
description = "WebAssembly bindings for Agari Riichi Mahjong scoring engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agari = { path = "../agari-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
